--- a/OOP_Tutorials/OOP_Tutorials.csproj
+++ b/OOP_Tutorials/OOP_Tutorials.csproj
@@ -43,6 +43,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CorporateCustomer.cs" />
+    <Compile Include="Customer.cs" />
+    <Compile Include="CustomerManager.cs" />
+    <Compile Include="IndividualCustomer.cs" />
     <Compile Include="Product.cs" />
     <Compile Include="ProductManager.cs" />
     <Compile Include="Program.cs" />
