--- a/OOP_Tutorials/OOP_Tutorials.csproj
+++ b/OOP_Tutorials/OOP_Tutorials.csproj
@@ -43,14 +43,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ApplicationManager.cs" />
     <Compile Include="CorporateCustomer.cs" />
+    <Compile Include="CreditManager.cs" />
     <Compile Include="Customer.cs" />
     <Compile Include="CustomerManager.cs" />
+    <Compile Include="HousingLoanManager.cs" />
     <Compile Include="IndividualCustomer.cs" />
+    <Compile Include="PersonalLoanManager.cs" />
     <Compile Include="Product.cs" />
     <Compile Include="ProductManager.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="VehicleLoanManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
